# implicit-estimators

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
experiments/: README.md  base.py  config_util.py  create_configs.py  gridsearch.py  logging.py  plot_result_v2.py  plot_results.py  rollout.py  run_supervised.sh  supervised.py  supervised_grid.sh  utils.py
experiments/chain/: configurables.py  env.py  explicit.gin  implicit.gin  supervised.py
experiments/chain/supervised/: experiment.py  explicit.gin  explicit.py  explicitmatrix.gin  implicit.gin  implicit.py  run.py
experiments/configs/supervised/: base.gin  explicit.gin  implicit.gin
experiments/configs/supervised/envs/: chain.gin  chain_rollout.gin  four_rooms.gin  four_rooms_rollout.gin  mountaincar.gin
experiments/four_rooms/: configurables.py
experiments/mountaincar/: configurables.py
experiments/results/chain/explicit/202102021420/: results.csv
experiments/results/chain/explicit/202102021422/: results.csv
experiments/results/chain/implicit/202102021347/: results.csv
experiments/results/chain/implicit/202102021424/: results.csv
experiments/results/chain_rollout/explicit/202106021905/: joblog  results.csv
experiments/results/chain_rollout/implicit/202106021949/: joblog  results.csv
experiments/results/four_rooms/explicit/202102021114/: results.csv
experiments/results/four_rooms/explicit/202102021124/: results.csv
experiments/results/four_rooms/implicit/202102021111/: results.csv
experiments/results/four_rooms/implicit/202102021120/: results.csv
experiments/results/four_rooms_rollout/explicit/202106021401/: joblog  results.csv
experiments/results/four_rooms_rollout/implicit/202106021544/: joblog  results.csv
experiments/results/mountaincar/explicit/202102020608/: results.csv
experiments/results/mountaincar/explicit/202102020835/: results.csv
experiments/results/mountaincar/explicit/202106021808/: joblog  results.csv
experiments/results/mountaincar/implicit/202102020536/: results.csv
experiments/results/mountaincar/implicit/202106021646/: joblog  (+1 more)
experiments/scripts/: run_all.sh  run_explicit_chain.sh  run_explicit_four_rooms.sh  run_explicit_mountaincar.sh  run_implicit_chain.sh  run_implicit_four_rooms.sh  run_implicit_mountaincar.sh
imprl/mdp/: __init__.py  base.py  dense.py  implicit.py  value.py
imprl/modules/: __init__.py  base.py  features.py  implicit.py  linear.py  mdp.py
tests/: conftest.py  test_dense.py  test_implicit.py  test_value.py
tests/experiments/: test_chain.py
(+86717 files in other folders)
