[tool.poetry]
name = "imprl"
version = "1.1.4"
description = ""
authors = ["Clement Gehring <clement@gehring.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.13"
jaxlib = "^0.1.66"
numpy = "^1.19.1"
fax = {git = "https://github.com/gehring/fax.git"}
rlax = "^0.0.2"
optax = "^0.0.1"
tjax = "^0.7.3"
gin-config = "^0.3.0"
pandas = "^1.1.1"
tables = "^3.6.1"
dm-acme = "^0.1.8"
tqdm = "^4.50.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
isort = "^5.4.2"
mypy = "^0.782"
notebook = "^6.1.4"
jupyterlab = "^2.2.8"
seaborn = "^0.11.0"

[tool.isort]
line_length = 100
known_first_party = ["imprl"]
known_third_party = ["jax", "tjax"]
multi_line_output = 0
skip = []


#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"
